# enve

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: audit.yml  ci.yml
benches/: main_benches.rs
enve_mod/: Cargo.toml
enve_mod/src/: lib.rs
estring/: Cargo.toml  LICENSE  README.md
estring/src/: core.rs  error.rs  lib.rs
estring/src/core/: prim.rs  vec.rs
estring/src/core/prim/: bool.rs  number.rs
examples/: README.md  calc.rs  hyper.rs  readme.md  rocket.rs
examples/diesel/: .env  Cargo.toml  README.md  docker-compose.example.yml  main.rs
examples/diesel/migrations/2019-12-28-212542_create-posts/: down.sql  up.sql
examples/diesel/src/: db.rs  main.rs
examples/hyper/: Cargo.toml  README.md
examples/hyper/src/: main.rs
examples/rocket/: Cargo.toml  README.md
examples/rocket/src/: main.rs
itconfig/: Cargo.toml  README.md
itconfig-macro/: Cargo.toml
itconfig-macro/src/: ast.rs  expand.rs  lib.rs  parse.rs  utils.rs
itconfig-tests/: Cargo.toml
itconfig-tests/benches/: main_benches.rs
itconfig-tests/tests/: config_macro.rs  get_env.rs
itconfig/src/: cfg.rs  enverr.rs  envstr.rs  error.rs  get_env.rs  get_vec_env.rs  getenv.rs  lib.rs  macro.rs  utils.rs
itconfig/src/core/: prim.rs  vec.rs
itconfig_tests/: Cargo.toml
itconfig_tests/tests/: config_macro.rs  get_env.rs  get_env_or_default.rs
src/: core.rs  error.rs  estr.rs  lib.rs  utils.rs
src/core/: vec.rs
src/estr/: structs.rs  vec.rs
tests/: config_macro.rs
