[workspace]
members = [
  "estring",
  "enve_mod",
]

[package]
name = "enve"
version = "1.1.1"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "Easy build a configs from environment variables and use it in globally."
categories = ["config", "web-programming"]
keywords = ["config", "env", "configuration", "environment", "macro"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pleshevskiy/enve"
homepage = "https://github.com/pleshevskiy/enve"
documentation = "https://docs.rs/enve"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
number = ["estring/number"]
bool  = ["estring/bool"]
vec = ["estring/vec"]

macro = ["enve_mod"]

[dependencies]
estring = "0.1"
enve_mod = { version = "1.1", path = "./enve_mod", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3.1"

[badges]
maintenance = { status = "actively-developed" }

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true

[[example]]
name = "calc"
required-features = ["number", "vec"]

