[package]
name = "enve"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "it helps you work with environment variables and convert it to any type using only type annotations"
categories = ["config"]
keywords = ["env", "environment"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pleshevskiy/enve"

[package.metadata]
msrv = "1.51.0"

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
number = ["estring/number"]
bool  = ["estring/bool"]
vec = ["estring/vec"]

[dependencies]
estring = "0.1"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "calc"
required-features = ["number", "vec"]

