[package]
name = "enve"
version = "0.2.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "it helps you work with environment variables and convert it to any type using only type annotations"
categories = ["config"]
keywords = ["env", "environment"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pleshevskiy/enve"
rust-version = "1.59.0"

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
low-level = ["estring/low-level"]
structs = ["estring/structs"]

# deprecated
number = []
bool  = []
vec = ["structs"]

[dependencies]
estring = "0.2"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "calc"
required-features = ["structs"]

