[package]
name = "itconfig-macro"
version = "1.1.1"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "Easy build a configs from environment variables and use it in globally."
categories = ["config", "web-programming"]
keywords = ["config", "env", "configuration", "environment", "macro"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pleshevskiy/itconfig-rs"
homepage = "https://github.com/pleshevskiy/itconfig-rs"
documentation = "https://docs.rs/itconfig"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.60"
quote = "1.0.9"
proc-macro2 = "1.0.24"

[dev-dependencies]
itconfig = { path = ".." }
lazy_static = "1.4.0"

[badges]
maintenance = { status = "actively-developed" }
