[package]
name = "itconfig_tests"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itconfig = { path = '../itconfig' }
criterion = "0.3.1"
lazy_static = "1.4.0"

[features]
default = ["meta_namespace", "static"]
meta_namespace = []
static = ["itconfig/static"]

[[bench]]
name = "main_benches"
harness = false
