[package]
name = "itconfig"
version = "1.1.1"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
description = "Easy build a configs from environment variables and use it in globally."
categories = ["config", "web-programming"]
keywords = ["config", "env", "configuration", "environment", "macro"]
edition = "2018"
license = "MIT"
repository = "https://github.com/icetemple/itconfig-rs"
homepage = "https://github.com/icetemple/itconfig-rs"
documentation = "https://docs.rs/itconfig"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

macro = ["itconfig-macro"]

number = []
bool  = []
vec = []

[dependencies]
itconfig-macro = { version = "1.1", path = "../itconfig-macro", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[badges]
maintenance = { status = "passively-maintained" }

# https://docs.rs/about
[package.metadata.docs.rs]
all-features = true

