[package]
name = "diesel"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itconfig = { path = "../../itconfig" }
dotenv = "0.15.0"
diesel = { version = "1.4.3", features = ["postgres"] }