[package]
name = "itconfig-diesel-example"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itconfig = { path = "../../itconfig", default-features = false, features = ["macro"] }
dotenv = "0.15.0"
diesel = { version = "1.4.6", features = ["postgres"] }
