[package]
name = "itconfig-hyper-example"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itconfig = { path = "../../itconfig" }
hyper = "0.13.1"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
bytes = "0.5"
futures-util = { version = "0.3", default-features = false }
pretty_env_logger = "0.3"