[package]
name = "itconfig-hyper-example"
version = "0.1.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itconfig = { path = "../../itconfig", features = ["macro"] }
hyper = "0.14.4"
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["macros"] }
bytes = "1.0.1"
futures-util = { version = "0.3.13", default-features = false }
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
